--- a/app/views/admin/partials/_leftmenu.html
+++ b/app/views/admin/partials/_leftmenu.html
@@ -19,7 +19,10 @@
                                           <a href="/admin"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a>
                                 </li>
                                 <li class="active">
-                                          <a href="/admin/changepwd"><i class="fa fa-users"></i> <span>Change Password</span></a>
+                                          <a href="/admin/users"><i class="fa fa-users"></i> <span>Users</span></a>
+                                </li>
+                                 <li class="active">
+                                          <a href="/admin/changepwd"><i class="fa fa-stack-exchange"></i> <span>Change Password</span></a>
                                 </li>
                      </ul>
            </section><!-- /.sidebar -->
