--- a/app/views/admin/view/index.html
+++ b/app/views/admin/view/index.html
@@ -1,6 +1,20 @@
 {% extends 'admin/layout/layout.html' %}
 {% block content %}
            <div class="row">
-            
+           	<div class="col-lg-3 col-xs-6">
+           		<!-- small box -->
+           		<div class="small-box bg-green">
+           			<div class="inner">
+           				<h3>{{user_count}}</h3>
+           				<p>Users</p>
+           			</div>
+           			<div class="icon">
+           				<i class="ion ion-person-add"></i>
+           			</div>
+           			<a class="small-box-footer" href="/admin/users">
+           				More info <i class="fa fa-arrow-circle-right"></i>
+           			</a>
+           		</div>
+           	</div><!-- ./col -->
            </div>
 {% endblock %}
