--- a/app/views/admin/view/resetPassword.html
+++ b/app/views/admin/view/resetPassword.html
@@ -1,7 +1,16 @@
 {% extends "admin/layout/layout.html" %}
 {% block footer %}
 	<script src="/javascripts/jqueryvalidate/jquery.validate.js"></script>
-	<script src="/javascripts/validate.js"></script>
+	<script src="/javascripts/AdminLTE/validate.js" type="text/javascript"></script>
+{% endblock %}
+{% block heading %}
+           <section class="content-header">
+                     <h1>Change Password</h1>
+                     <ol class="breadcrumb">
+                                <li><a href="/admin"><i class="fa fa-dashboard"></i> Home</a></li>
+                                <li class="active">Change Password</li>
+                     </ol>
+           </section>
 {% endblock %}
 {% block content %}
 	<div class="col-md-2"></div>
