--- a/app/views/admin/view/user_new.html
+++ b/app/views/admin/view/user_new.html
@@ -1,4 +1,4 @@
-{% extends 'super_admin/_layout.html' %}
+{% extends "admin/layout/layout.html" %}
 {% block heading %}
 	<section class="content-header">
 		<h1>User</h1>
@@ -19,26 +19,14 @@
 				<!-- form start -->
 				<form id="usernew" role="form" action="/admin/users/new" method="POST">
 					<div class="box-body">
-						<div class="form-group">
-							<label for="first_name">First name</label>
-							<input type="text" value="{{suser.firstname}}" placeholder="First name" id="firstname" name="firstname" class="form-control" />
-						</div>
-						<div class="form-group">
-							<label for="last_name">Last name</label>
-							<input type="text" value="{{suser.lastname}}" placeholder="Last name" id="lastname" class="form-control" name="lastname" />
-						</div>
-						<div class="form-group">
-							<label for="email">Email</label>
-							<input type="email" value="{{suser.email}}" placeholder="Email address" id="email" class="form-control" name="email" />
-						</div>
-						<div class="form-group">
-							<label for="password">Password</label>
-							<input type="password" value="{{suser.password}}" placeholder="Password" id="password" class="form-control" name="password" />
-						</div>
-						<div class="form-group">
-							<label for="password">Confirm Password</label>
-							<input type="password" value="{{suser.confirm_password}}" placeholder="Confirm password" id="confirm_password" class="form-control" name="confirm_password" />
-						</div>
+						{% for key, item in signupForm.fields %}
+							{{ item.toHTML() | safe }}
+							{% asyncEach item in errors %}
+								{% if item[key] %}
+									{{item[key]}}
+								{% endif %}
+							{% endeach %}
+						{% endfor %}
 					</div><!-- /.box-body -->
 					<div class="box-footer">
 						<button class="btn btn-primary" type="submit">Save</button>
@@ -51,6 +39,6 @@
 {% endblock %}
 
 {% block footer %}
-	<script src="/admin/js/plugins/jqueryvalidate/jquery.validate.js" type="text/javascript"></script>
-	<script src="/admin/js/AdminLTE/validate.js" type="text/javascript"></script>
+	<script src="/javascripts/jqueryvalidate/jquery.validate.js" type="text/javascript"></script>
+	<script src="/javascripts/AdminLTE/validate.js" type="text/javascript"></script>
 {% endblock %}
