--- a/app/views/front/signup.html
+++ b/app/views/front/signup.html
@@ -2,13 +2,13 @@
 	{% block header %}
 		<script src="/javascripts/jquery.min.js"></script>
 		<script src="/javascripts/jqueryvalidate/jquery.validate.js"></script>
-		<!-- <script src="/javascripts/validate.js"></script> -->
+		<script src="/javascripts/validate.js"></script>
 	{% endblock %}
 	{% block content %}
 		{% if message %} {{message}} {% endif %}
 		{% if error %} {{error}} {% endif %}
 		<h1>{{type}}</h1>
-		<form method="POST" id="signup">
+		<form id="usernew" method="POST" id="signup">
 			{% for key, item in signupForm.fields %}
 				{{ item.toHTML() | safe }}
 				{% asyncEach item in errors %}
