--- a/app/views/admin/partials/_leftmenu.html
+++ b/app/views/admin/partials/_leftmenu.html
@@ -15,15 +15,10 @@
                                 </div>
                      </div><!-- sidebar menu: : style can be found in sidebar.less -->
                      <ul class="sidebar-menu">
-                                <li class="active">
-                                          <a href="/admin"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a>
-                                </li>
-                                <li class="active">
-                                          <a href="/admin/users"><i class="fa fa-users"></i> <span>Users</span></a>
-                                </li>
-                                 <li class="active">
-                                          <a href="/admin/changepwd"><i class="fa fa-stack-exchange"></i> <span>Change Password</span></a>
-                                </li>
+                                <li class="active"><a href="/admin"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a></li>
+                                <li class="active"><a href="/admin/users"><i class="fa fa-users"></i> <span>Users</span></a></li>
+                                <li class="active"><a href="/admin/pages"><i class="fa fa-file-word-o"></i> <span>Pages</span></a></li>
+                                <li class="active"><a href="/admin/changepwd"><i class="fa fa-stack-exchange"></i> <span>Change Password</span></a></li>
                      </ul>
            </section><!-- /.sidebar -->
 </aside>
